src/test/ui/issues/issue-4XXXX/issue-49824.rs
fn main() {
    let mut x = 0;
    || {
        || {
        //~^ ERROR captured variable cannot escape `FnMut` closure body
            let _y = &mut x;
        }
    };
}
